v0.3.2
- Might have fixed the games not saving
- Fixed a nullpointerexception
- Basic spectating
- Changed most player keys to String keys
- Might have fixed permissions. (again)
- Added specific block change listener. Can be internal, LogBlock, or HawkEye (HawkEye is not currently implements) requests are open for more

v0.3.1
- Logging stuff
- register forgotten BlockListener
- Can-teleport
- use-command
- Early world reseting in the form of full world
- /hga add game <game name>' now instructs user to add spawnpoints after creating it.
- Fixed players still being able to join even under conditions where they shouldn't be able to
- Added option to allow chests to be automatically added and filled at first open

v0.3
- Clearing inventories is now optional
- Fixed winner not being recognized
- Add quit command.
- Cleanup
- Lives cleanup
- Rejoin/Join/Leave cleaned up
- Added Metrics
- Use equalsIgnoreCase, not equals for commands
- all-vote is in
- block interact/place/break options
- Added an unimplemented Logging class
- Auto-vote
- Made quitting before a game starts remove you from the games stats