@@ -25,6 +25,7 @@ public class Defaults {
 	ADMIN_RELOAD("hungergame.admin.reload", ADMIN),
 	ADMIN_KICK("hungergame.admin.kick", ADMIN),
 	ADMIN_HELP("hungergame.admin.help", ADMIN),
+	ADMIN_RESTOCK("hungergame.admin.restock", ADMIN),
 	USER("hungergame.user", null),
 	USER_JOIN("hungergame.user.join", USER),
 	USER_LEAVE("hungergame.user.leave", USER),
@@ -138,6 +139,7 @@ public class Defaults {
 	ADMIN_RESUME("/%s resume <game name>", "resume a game"),
 	ADMIN_RELOAD("/%s rejoin", "reload MyHungerGames"),
 	ADMIN_KICK("/%s kick <player>", "kick a player from a game"),
+	ADMIN_RESTOCK("/%s restock <game name>", "restock all a game's chests"),
 	USER_JOIN("/%s join <game name>", "join a game"),
 	USER_LEAVE("/%s leave", "leave current game temporarily (if enabled)"),
 	USER_LIST("/%s list", "list games"),
